Tue Nov 10 14:34:09 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (rb_time_timespec_new): swap utc and localtime
	  to generate gmt flag by INT_MAX - gmtoff.

Tue Nov 10 14:01:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_{le,lt,ge,gt}): new methods, Hash#<=, Hash#<,
	  Hash#>=, Hash#>, to test if all elements of a hash are also
	  included in another hash, and vice versa.
	  [ruby-core:68561] [Feature #10984]

Tue Nov 10 11:25:29 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (rb_timespec_now): added.

	* time.c (rb_time_timespec_new): added.

Tue Nov 10 06:17:17 2015  Eric Wong  <e@80x24.org>

	* variable.c (rb_autoload_load): allow recursive calls
	  [ruby-core:71345] [Bug #11658]
	* test/ruby/test_autoload.rb (test_autoload_while_autoloading):
	  new test by: Hiroshi Shirosaki <h.shirosaki@gmail.com>
	  [ruby-core:71390]

Tue Nov 10 00:36:46 2015  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Message::MessageEncoder#put_labels):
	  Prevent overflow of pointer to labels.
	  Patch by Hannes Georg.  [ruby-core:71248] [Bug #11632]

Tue Nov 10 00:25:41 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: update to power_assert 0.2.6.

Mon Nov  9 21:48:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_check_funcall_default): split from
	  rb_check_funcall to return the given fallback value.

	* object.c (rb_obj_dig): use rb_check_funcall_default so that tail
	  call optimization will be possible.  [Feature #11643]

Mon Nov  9 21:27:23 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_dig): new method Array#dig.

	* hash.c (rb_hash_dig): new method Hash#dig.

	* object.c (rb_obj_dig): dig in nested arrays/hashes.
	  [Feature #11643]

Mon Nov  9 18:00:47 2015  Yuki Nishijima  <mail@yukinishijima.net>

	* gems/bundled_gems: Upgrade the did_you_mean gem to 1.0.0.beta3

Mon Nov  9 17:38:14 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
